refactor: define specific node types/classes for added fields and references