@@ -7,8 +7,8 @@ import de.ma_vin.util.layer.generator.logging.ILogWrapper;
 import de.ma_vin.util.layer.generator.sources.*;
 import de.ma_vin.util.layer.generator.config.elements.Config;
 import de.ma_vin.util.layer.generator.config.elements.Entity;
-import de.ma_vin.util.layer.generator.config.elements.Field;
-import de.ma_vin.util.layer.generator.config.elements.Reference;
+import de.ma_vin.util.layer.generator.config.elements.fields.Field;
+import de.ma_vin.util.layer.generator.config.elements.references.Reference;
 import lombok.extern.log4j.Log4j2;
 
 import java.io.File;
@@ -165,7 +165,7 @@ public class AccessMapperCreator extends AbstractMapperCreator {
         addConvertMethodDescriptionWithParent(convertMethodWithMap, entity, DOMAIN_POSTFIX, DAO_POSTFIX);
 
         mapperClass.addMethod(convertMethodWithMap);
-        if (referenceToParent.isList() && !referenceToParent.isOwner()) {
+        if (referenceToParent.isList() && !referenceToParent.getIsOwner()) {
             mapperClass.addImport(String.format(PACKAGE_AND_CLASS_NAME_FORMAT, getPackage(referenceToParent.getRealTargetEntity(), daoPackageName)
                     , DaoCreator.getConnectionTableNameParentRef(referenceToParent)));
         }
@@ -180,13 +180,13 @@ public class AccessMapperCreator extends AbstractMapperCreator {
      * @param referenceToParent Reference to parent
      */
     private void addSettingOfDaoParent(Method convertMethod, Entity entity, Reference referenceToParent) {
-        if (referenceToParent.isOwner()) {
+        if (referenceToParent.getIsOwner()) {
             convertMethod.addLine("%sresult.setParent%s(parent);", AbstractGenerateLines.TAB, referenceToParent.getTargetEntity());
         }
         if (referenceToParent.isList()) {
             String getterMethodName = getUpperFirst(referenceToParent.getReferenceName());
 
-            if (referenceToParent.isOwner()) {
+            if (referenceToParent.getIsOwner()) {
                 convertMethod.addLine("%sparent.get%s().add(result);", AbstractGenerateLines.TAB, getterMethodName);
             } else {
                 convertMethod.addLine("%1$s%2$s connectionTable = %3$s.create%2$s();", AbstractGenerateLines.TAB
@@ -539,8 +539,8 @@ public class AccessMapperCreator extends AbstractMapperCreator {
             return;
         }
         List<Reference> references = referenceToParent.getRealTargetEntity().getReferences().stream()
-                .filter(ref -> ref.getRealTargetEntity().equals(referenceToParent.getParent()) && ref.isList() == referenceToParent.isList() && ref.isOwner() == referenceToParent.isOwner())
-                .collect(Collectors.toList());
+                .filter(ref -> ref.getRealTargetEntity().equals(referenceToParent.getParent()) && ref.isList() == referenceToParent.isList() && ref.getIsOwner() == referenceToParent.getIsOwner())
+                .toList();
 
         if (referenceToParent.isConnectionFiltering()) {
             convertMethod.addTabbedLine("switch (%s) {", 1, getLowerFirst(referenceToParent.getNonOwnerFilterField().getFilterFieldName()));
@@ -725,10 +725,10 @@ public class AccessMapperCreator extends AbstractMapperCreator {
         mapperClass.addImport(ArrayList.class.getName());
         convertMethod.addTabbedLine("dao.get%s().forEach(arg ->", 1, getterSubName);
 
-        if (reference.isOwner() && hasIncludeChildrenParameter) {
+        if (reference.getIsOwner() && hasIncludeChildrenParameter) {
             convertMethod.addTabbedLine("%s.%s(arg, true, domain, %s)"
                     , 3, mapperName, mapperMethodName, MAPPED_OBJECTS_PARAMETER_TEXT);
-        } else if (reference.isOwner() && !hasIncludeChildrenParameter) {
+        } else if (reference.getIsOwner() && !hasIncludeChildrenParameter) {
             convertMethod.addTabbedLine("%s.%s(arg, domain, %s)"
                     , 3, mapperName, mapperMethodName, MAPPED_OBJECTS_PARAMETER_TEXT);
         } else if (reference.isConnectionFiltering() && hasIncludeChildrenParameter) {
